# MediaTool

./: .gitignore  .gitmodules  README.md  index.html  package.json
.github/workflows/: build.yml
src/: main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/libmediatool/: Cargo.toml  build.rs
src-tauri/libmediatool/cpp_src/: CMakeLists.txt  MediaInfoWrap.cpp
src-tauri/libmediatool/src/: lib.rs
src-tauri/src/: lib.rs  main.rs
