[package]
name = "mediatool"
version = "0.1.0"
description = "A MediaTool App"
authors = ["Wind"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mediatool_app"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }
libmediatool = { path = "libmediatool" }

[dependencies]
libmediatool = { path = "libmediatool" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.2.0", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
